# sbus-gamepad-bridge

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  requirements.txt  upload.sh
include/: blinkstatus.hpp  common_state.hpp  hid_handling.h  sbus.hpp  sbus_decoder.hpp  sbus_uart.hpp  synchronizer_buffer.hpp  tusb_config.h  usb_descriptors.h  ws2812led.hpp
src/: blinkstatus.cpp  common_state.cpp  hid_handling.cpp  main.cpp  sbus.hpp  sbus_decoder.cpp  sbus_decoder.hpp  usb_descriptors.c  usb_descriptors.h
